[package]
name = "open-library-extractor"
version = "0.1.0"
authors = ["Clément Renault <clement@meilisearch.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.35"
csv = "1.1.5"
flate2 = "1.0.19"
heed = "0.10.5"
serde = {version = "1.0.118", features = ["serde_derive"] }
serde_json = "1.0.60"
tempfile = "3.1.0"
